--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint:js": "eslint src/**/*.{js,jsx}",
     "prepare": "husky install",
     "predeploy": "npm run build",
-   "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "husky": "^7.0.4"
   }
 }
