--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3",
-    "husky": "^7.0.4"
+    "husky": "^7.0.4",
+    "prop-types": "^15.8.1"
   }
 }
